MARP-3702 Handle Feedbacks